--- a/.github/workflows/sklearnserver-docker-publish.yml
+++ b/.github/workflows/sklearnserver-docker-publish.yml
@@ -8,10 +8,6 @@ on:
     tags:
       - v*
   pull_request:
-  workflow_run:
-    workflows: ["Sklearn Server Docker Publisher"]
-    types:
-      - completed
   schedule:
     - cron: '*/15 * * * *' # Runs every 15 minutes
 
@@ -49,57 +45,26 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-poetry-
 
-      - name: Run tests
-        uses: docker/build-push-action@v5
-        with:
-          platforms: ${{ matrix.platform }}
-          context: python
-          file: python/sklearn.Dockerfile
-          push: false
-          cache-from: type=gha,mode=max
-          cache-to: type=gha,mode=max
-          provenance: false
-
-    timeout-minutes: 120 # Set the time limit for each job
-    continue-on-error: true
-
-  retry:
-    runs-on: ubuntu-latest
-    if: ${{ failure() && github.event.workflow_run.conclusion == 'timed_out' }}
-    needs: test
-    steps:
-      - name: Retry failed job due to timeout
-        run: echo "Retrying job due to timeout failure..."
-
-      - name: Checkout source
-        uses: actions/checkout@v4
-
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Restore cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/pypoetry/cache
-            ~/.cache/pypoetry/artifacts
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
-
-      - name: Run tests again
-        uses: docker/build-push-action@v5
-        with:
-          platforms: ${{ matrix.platform }}
-          context: python
-          file: python/sklearn.Dockerfile
-          push: false
-          cache-from: type=gha,mode=max
-          cache-to: type=gha,mode=max
-          provenance: false
+      - name: Run tests with retry logic
+        id: test
+        run: |
+          for i in {1..3}; do
+            echo "Attempt $i to run tests..."
+            # Replace this with your actual command to run tests
+            docker build -t ${{ env.IMAGE_NAME }} .
+            if [ $? -eq 0 ]; then
+              echo "Tests succeeded!"
+              break
+            else
+              echo "Tests failed on attempt $i."
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed. Exiting."
+                exit 1
+              fi
+              echo "Retrying in 5 seconds..."
+              sleep 5
+            fi
+          done
 
   # Push image to GitHub Packages.
   push:
