added Log the test result 2

--- a/.github/workflows/sklearnserver-docker-publish.yml
+++ b/.github/workflows/sklearnserver-docker-publish.yml
@@ -100,5 +100,7 @@ jobs:
     needs: [test, retry]
     steps:
       - name: Log test result
-        run: echo "Test job result: ${{ needs.test.result }}"
+        run: |
+          echo "Test job result: ${{ needs.test.result }}"
+          echo "Retry job result: ${{ needs.retry.result }}"
 
