--- a/.github/workflows/sklearnserver-docker-publish.yml
+++ b/.github/workflows/sklearnserver-docker-publish.yml
@@ -56,12 +56,21 @@ jobs:
 
     timeout-minutes: 10 # Time limit for each job
 
+  # Retry job that executes if the test job fails or is canceled
   retry:
     runs-on: ubuntu-latest
     needs: test
+    if: ${{ always() }}  # Always run this job after test
     steps:
-      - name: Retry failed job due to timeout or cancellation
-        run: echo "Retrying job due to timeout failure or cancellation..."
+      - name: Check test result
+        id: check_result
+        run: |
+          if [[ "${{ needs.test.result }}" == "failure" ]] || [[ "${{ needs.test.result }}" == "cancelled" ]]; then
+            echo "Retrying job due to failure or cancellation..."
+          else
+            echo "No retry needed, exiting."
+            exit 0
+          fi
 
       - name: Checkout source
         uses: actions/checkout@v4
