--- a/.github/workflows/sklearnserver-docker-publish.yml
+++ b/.github/workflows/sklearnserver-docker-publish.yml
@@ -44,6 +44,7 @@ jobs:
             ${{ runner.os }}-poetry-
 
       - name: Run tests
+        id: run_tests  # Give this step an ID to reference its result
         uses: docker/build-push-action@v5
         with:
           platforms: ${{ matrix.platform }}
@@ -56,22 +57,15 @@ jobs:
 
     timeout-minutes: 10 # Time limit for each job
 
-  # Retry job that executes if the test job fails or is canceled
+  # Retry job that executes if the test job fails or is canceled for linux/ppc64le
   retry:
     runs-on: ubuntu-latest
     needs: test
     if: ${{ always() }}  # Always run this job after test
+    strategy:
+      matrix:
+        platform: [linux/ppc64le]  # Only retry for linux/ppc64le
     steps:
-      - name: Check test result
-        id: check_result
-        run: |
-          if [[ "${{ needs.test.result }}" == "failure" ]] || [[ "${{ needs.test.result }}" == "cancelled" ]]; then
-            echo "Retrying job due to failure or cancellation..."
-          else
-            echo "No retry needed, exiting."
-            exit 0
-          fi
-
       - name: Checkout source
         uses: actions/checkout@v4
 
@@ -106,9 +100,11 @@ jobs:
   log-result:
     runs-on: ubuntu-latest
     needs: [test, retry]
+    if: ${{ always() }}  # Always execute this job
     steps:
       - name: Log test result
         run: |
           echo "Test job result: ${{ needs.test.result }}"
           echo "Retry job result: ${{ needs.retry.result }}"
+
 
