--- a/.github/workflows/sklearnserver-docker-publish.yml
+++ b/.github/workflows/sklearnserver-docker-publish.yml
@@ -33,16 +33,16 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Restore cache
+      # Cache Docker layers from previous runs
+      - name: Restore Docker Cache
         uses: actions/cache@v4
         with:
-          path: |
-            ~/.cache/pypoetry/cache
-            ~/.cache/pypoetry/artifacts
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-docker-${{ matrix.platform }}-${{ hashFiles('python/sklearn.Dockerfile') }}
           restore-keys: |
-            ${{ runner.os }}-poetry-
+            ${{ runner.os }}-docker-${{ matrix.platform }}-
 
+      # Run tests using Docker Buildx
       - name: Run tests
         id: run_tests  # Give this step an ID to reference its result
         uses: docker/build-push-action@v5
@@ -51,17 +51,27 @@ jobs:
           context: python
           file: python/sklearn.Dockerfile
           push: false
-          cache-from: type=gha,mode=max
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,src=/tmp/.buildx-cache
+          cache-to: type=gha,dest=/tmp/.buildx-cache,mode=max
           provenance: false
 
-    timeout-minutes: 10 # Time limit for each job
+    timeout-minutes: 20  #  timeout for the test job
+
+  # Log the test result after the test job
+  log-result:
+    runs-on: ubuntu-latest
+    needs: test
+    if: ${{ always() }} 
+    steps:
+      - name: Log test result
+        run: |
+          echo "Test job result: failure"
 
   # Retry job that executes if the test job fails or is canceled for linux/ppc64le
   retry:
     runs-on: ubuntu-latest
     needs: test
-    if: ${{ always() }}  # Always run this job after test
+    if: ${{ failure() && matrix.platform == 'linux/ppc64le' }}  # Run retry only on failure and for ppc64le
     strategy:
       matrix:
         platform: [linux/ppc64le]  # Only retry for linux/ppc64le
@@ -75,36 +85,26 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Restore cache
+      # Restore Docker Cache for retry job
+      - name: Restore Docker Cache
         uses: actions/cache@v4
         with:
-          path: |
-            ~/.cache/pypoetry/cache
-            ~/.cache/pypoetry/artifacts
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-docker-${{ matrix.platform }}-${{ hashFiles('python/sklearn.Dockerfile') }}
           restore-keys: |
-            ${{ runner.os }}-poetry-
+            ${{ runner.os }}-docker-${{ matrix.platform }}-
 
-      - name: Run tests again
+      # Run retry tests using Docker Buildx and cached layers
+      - name: Run tests again for ppc64le
         uses: docker/build-push-action@v5
         with:
           platforms: ${{ matrix.platform }}
           context: python
           file: python/sklearn.Dockerfile
           push: false
-          cache-from: type=gha,mode=max
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,src=/tmp/.buildx-cache
+          cache-to: type=gha,dest=/tmp/.buildx-cache,mode=max
           provenance: false
 
-  # Log the test result (always executes)
-  log-result:
-    runs-on: ubuntu-latest
-    needs: [test, retry]
-    if: ${{ always() }}  # Always execute this job
-    steps:
-      - name: Log test result
-        run: |
-          echo "Test job result: ${{ needs.test.result }}"
-          echo "Retry job result: ${{ needs.retry.result }}"
 
 
