--- a/.github/workflows/sklearnserver-docker-publish.yml
+++ b/.github/workflows/sklearnserver-docker-publish.yml
@@ -23,8 +23,6 @@ jobs:
     strategy:
       matrix:
         platform: [linux/amd64, linux/arm64/v8, linux/ppc64le]
-    outputs:
-      ppc64le_failed: ${{ steps.set-failure-output.outputs.is_ppc64le_failed }}
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -57,16 +55,6 @@ jobs:
           cache-to: type=gha,dest=/tmp/.buildx-cache,mode=max
           provenance: false
 
-      # Set output to track if tests on linux/ppc64le failed
-      - name: Set failure output for linux/ppc64le
-        id: set-failure-output
-        run: |
-          if [[ "${{ matrix.platform }}" == "linux/ppc64le" && "${{ steps.run_tests.outcome }}" == "failure" ]]; then
-            echo "is_ppc64le_failed=true" >> $GITHUB_OUTPUT
-          else
-            echo "is_ppc64le_failed=false" >> $GITHUB_OUTPUT
-          fi
-
     timeout-minutes: 20  # timeout for the test job
 
   # Log the test result after the test job
@@ -79,11 +67,14 @@ jobs:
         run: |
           echo "Test job result: ${{ needs.test.result }}"
 
-  # Retry job that executes if the test job fails for linux/ppc64le
+  # Retry job that executes if the test job fails for any platform, retry only on linux/ppc64le
   retry:
     runs-on: ubuntu-latest
     needs: test
-    if: ${{ needs.test.outputs.ppc64le_failed == 'true' }}  # Run retry only if linux/ppc64le failed
+    if: ${{ needs.test.result == 'failure' }}  # Run retry only if the test job failed
+    strategy:
+      matrix:
+        platform: [linux/ppc64le]  # Only retry for linux/ppc64le
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -99,15 +90,15 @@ jobs:
         uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-docker-${{ hashFiles('python/sklearn.Dockerfile') }}
+          key: ${{ runner.os }}-docker-${{ matrix.platform }}-${{ hashFiles('python/sklearn.Dockerfile') }}
           restore-keys: |
-            ${{ runner.os }}-docker-
+            ${{ runner.os }}-docker-${{ matrix.platform }}-
 
       # Run retry tests using Docker Buildx and cached layers
       - name: Run tests again for ppc64le
         uses: docker/build-push-action@v5
         with:
-          platforms: linux/ppc64le
+          platforms: ${{ matrix.platform }}
           context: python
           file: python/sklearn.Dockerfile
           push: false
