--- a/.github/workflows/sklearnserver-docker-publish.yml
+++ b/.github/workflows/sklearnserver-docker-publish.yml
@@ -65,13 +65,13 @@ jobs:
     steps:
       - name: Log test result
         run: |
-          echo "Test job result: ${{ needs.test.result }}"
+          echo "Test job result: ${{ needs.test.outcome }}"
 
   # Retry job that executes if the test job fails for any platform, retry only on linux/ppc64le
   retry:
     runs-on: ubuntu-latest
     needs: test
-    if: ${{ needs.test.result == 'failure' }}  # Run retry only if the test job failed
+    if: ${{ needs.test.outcome == 'failure' }}  # Run retry only if the test job failed
     strategy:
       matrix:
         platform: [linux/ppc64le]  # Only retry for linux/ppc64le
