--- a/.github/workflows/sklearnserver-docker-publish.yml
+++ b/.github/workflows/sklearnserver-docker-publish.yml
@@ -91,9 +91,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-docker-${{ matrix.platform }}-${{ hashFiles('python/sklearn.Dockerfile') }}
+          key: ${{ runner.os }}-docker-linux/ppc64le-${{ hashFiles('python/sklearn.Dockerfile') }}  # Use a consistent key
           restore-keys: |
-            ${{ runner.os }}-docker-${{ matrix.platform }}-
+            ${{ runner.os }}-docker-linux/ppc64le-
 
       # Run retry tests using Docker Buildx and cached layers
       - name: Run tests again for ppc64le
