--- a/python/kserve/pyproject.toml
+++ b/python/kserve/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
+
 packages = [
     { include = "kserve" },
 ]
@@ -40,9 +41,6 @@ cloudevents = "^1.6.2"
 six = "^1.16.0"
 kubernetes = ">=23.3.0"
 python-dateutil = "^2.8.0"
-numpy = "^1.26.0"
-psutil = "^5.9.6"
-grpcio = "^1.60.0"
 grpc-interceptor= ">=0.15.4,<1.0.0"
 protobuf = "^4.25.4"
 prometheus-client = "^0.20.0"
@@ -50,9 +48,14 @@ orjson = "^3.9.15"
 httpx = "^0.27.2"
 timing-asgi = "^0.3.0"
 tabulate = "^0.9.0"
-pandas =  "^2.2.0"
-pydantic = [{ version = "^2.5.0", python = "3.12" }, { version = ">1.0,<3", python = ">=3.9,<3.12" }]
 pyyaml = "^6.0.0"
+psutil = "^5.9.6"
+pydantic = [{ version = "^2.5.0", python = "3.12" }, { version = ">1.0,<3", python = ">=3.9,<3.12" }]
+
+# Secondary source for selected packages
+pandas = { version = "^2.2.0", source = "odh-pypi-local" }
+grpcio = { version = "^1.68.0", source = "odh-pypi-local" }
+numpy = { version = "^1.26.4", source = "odh-pypi-local" }
 
 # Storage dependencies. They can be opted into by apps.
 requests = { version = "^2.32.2", optional = true }
@@ -86,6 +89,13 @@ logging = [
 ray = [
     "ray"
 ]
+
+[[tool.poetry.source]]
+name = "odh-pypi-local"
+url = "https://na.artifactory.swg-devops.com/artifactory/api/pypi/sys-linux-power-team-ftp3distro-odh-pypi-local/simple/"
+priority = "explicit"
+
+
 [tool.poetry.group.test]
 optional = true
 
@@ -115,3 +125,4 @@ file_path = "../VERSION"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
